# app-dirs-rs

./: Cargo.toml  LICENSE.txt  README.md
src/: common.rs
src/imp/: mod.rs
src/imp/platform/: macos.rs  redox.rs
