[package]
name = "app_dirs"
version = "1.2.1"
authors = ["Andy Barron <AndrewLBarron@gmail.com>"]

description = "Put your app's data in the right place on every platform"
documentation = "https://docs.rs/app_dirs"
repository = "https://github.com/AndyBarron/app-dirs-rs"
readme = "README.md"
keywords = ["application", "data", "storage", "location", "directory"]
license = "MIT"

[target.'cfg(all(unix, not(target_os="macos")))'.dependencies]
xdg = {version="^2.0.0",registry="susytech"}

[target.'cfg(windows)'.dependencies]
ole32-sys = {version="^0.2.0",registry="susytech"}
shell32-sys = {version="^0.1.1",registry="susytech"}
winapi = {version="^0.2.8",registry="susytech"}
